2005-10-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.[ch]: added keyboard control to the
	Curves tool as suggested in bug #154809.

2005-10-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.c (gimp_curves_tool_oper_update): set
	cursor modifier and status bar hints to improve discoverability of
	Curves tool features.

2005-10-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/presets.c: added a Save icon.

2005-10-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpaligntool.[ch]: Make buttons insensitive
	until a target item has been selected; fixes bug #309038.

2005-10-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpaligntool.c: Remove bogus stuff about
	weak pointers, and disconnect properly in dispose 
	callback instead of finalize, as suggested by mitch.
	Fixes bug #314880.
	
2005-10-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.c: formatting.

2005-10-17  Manish Singh  <yosh@gimp.org>

	* app/core/gimppalette-import.c
	(gimp_palette_import_create_image_palette): delete stray ;

2005-10-17  Manish Singh  <yosh@gimp.org>

	* app/base/siox.c (siox_drb): declare mindistbg, mindistfg, and alpha
	float variables at the start of the block.

2005-10-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-enums.h
	* app/base/siox.[ch]
	* app/core/gimpdrawable-foreground-extract.[ch]
	* app/tools/gimpforegroundselecttool.[ch]: export stateful SIOX to
	the core API and use it from the foreground selection tool.

2005-10-17  Sven Neumann  <sven@gimp.org>

	* app/base/base.c (base_init)
	* app/base/tile-swap.c (tile_swap_init): create temp and swap
	directories using g_mkdir_with_parents() (bug #308658).

2005-10-17  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-foreground-extract.[ch]
	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.c: added "multiblob"
	property to GimpForegroundSelectOptions and pass it to