@@ -1,5 +1,10 @@
 2005-10-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/warp.c: use gimp_drawable_mask_intersect()
+	instead of gimp_drawable_mask_bounds().
+
+2005-10-19  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpcurvestool.[ch]: added keyboard control to the
 	Curves tool as suggested in bug #154809.
 
